# mejoranime

./: Cargo.toml  animes_2.json  log.txt
src/: anime.rs  main.rs
